--- a/app/dts/behaviors/caps_word.dtsi
+++ b/app/dts/behaviors/caps_word.dtsi
@@ -26,7 +26,7 @@
             label = "NUM_WORD";
             #binding-cells = <0>;
             // layers = <xx>; // to be specified in user config using "&num_word { layers = <xx>; };"
-            continue-list = <BACKSPACE DELETE DOT COMMA KP_NUM KP_EQUAL KP_DIVIDE KP_MULTIPLY KP_N0 KP_N1 KP_N2 KP_N3 KP_N4 KP_N5 KP_N6 KP_N7 KP_N8 KP_N9 KP_DOT KP_ENTER KP_PLUS KP_MINUS KP_ENTER>;
+            continue-list = <BACKSPACE DELETE DOT COMMA KP_NUM KP_EQUAL KP_DIVIDE KP_MULTIPLY KP_N0 KP_N1 KP_N2 KP_N3 KP_N4 KP_N5 KP_N6 KP_N7 KP_N8 KP_N9 KP_DOT KP_ENTER KP_PLUS KP_MINUS KP_ENTER TAB>;
             ignore-numbers;
         };
     };
